[gd_scene load_steps=4 format=3 uid="uid://r820gcc1lism"]

[ext_resource type="Script" uid="uid://ctcy3vj10t15i" path="res://addons/sprouty_dialogs/editor/components/scripts/translations_container.gd" id="1_188ol"]
[ext_resource type="Texture2D" uid="uid://tkq4pamepmr5" path="res://addons/sprouty_dialogs/editor/icons/interactable/collapse-down.svg" id="2_8u1nn"]
[ext_resource type="PackedScene" uid="uid://cs6visnc0puc3" path="res://addons/sprouty_dialogs/editor/components/translation_box.tscn" id="3_sqsni"]

[node name="TranslationsContainer" type="VBoxContainer"]
script = ExtResource("1_188ol")

[node name="Header" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="Header"]
layout_mode = 2
size_flags_horizontal = 3
text = "Translations"

[node name="ExpandButton" type="Button" parent="Header"]
layout_mode = 2
toggle_mode = true
icon = ExtResource("2_8u1nn")
flat = true

[node name="ScrollContainer" type="ScrollContainer" parent="."]
custom_minimum_size = Vector2(150, 160)
layout_mode = 2
horizontal_scroll_mode = 0

[node name="TextBoxes" type="VBoxContainer" parent="ScrollContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="TranslationBox" parent="ScrollContainer/TextBoxes" instance=ExtResource("3_sqsni")]
custom_minimum_size = Vector2(150, 100)
layout_mode = 2

[connection signal="toggled" from="Header/ExpandButton" to="." method="_on_expand_button_toggled"]
